--- a/index.html
+++ b/index.html
@@ -7,8 +7,92 @@
     <title>my portfolio</title>
 </head>
 <body>
-    <h2>hello</h2>
+    <header>
+        <nav id="navbar">
+            <ul>
+                <li><a href="#welcome-section">About</a></li>
+                <li><a href="#projects">Work</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section id="welcome-section"> 
+            <h1 class="page-title">Hey I am Meisam</h1>
+            <h4 class="page-subtitle">a web developer</h4>
+        </section>
+        <section id="projects">
+            <h2>These are some of my projects</h2>
+            <div class="projects-items">
+                <a href="http://www.google.com" target="_blank" class="project-tile"> 
+                    <img src="https://raw.githubusercontent.com/freeCodeCamp/cdn/master/build/testable-projects-fcc/images/tribute.jpg"
+                     alt="project">
+                    <p><span class="hover-title">&lt;</span>Random Quote Machine
+                         <span class="hover-title">&#47; &gt;</span></p>
+                </a>
 
-    <script src="./script.js"></script>
+                <a href="http://www.google.com" target="_blank" class="project-tile"> 
+                        <img src="https://raw.githubusercontent.com/freeCodeCamp/cdn/master/build/testable-projects-fcc/images/tribute.jpg"
+                         alt="project">
+                        <p><span class="hover-title">&lt;</span>Random Quote Machine
+                             <span class="hover-title">&#47; &gt;</span></p>
+                    </a>
+
+                    <a href="http://www.google.com" target="_blank" class="project-tile"> 
+                            <img src="https://raw.githubusercontent.com/freeCodeCamp/cdn/master/build/testable-projects-fcc/images/tribute.jpg"
+                             alt="project">
+                            <p><span class="hover-title">&lt;</span>Random Quote Machine
+                                 <span class="hover-title">&#47; &gt;</span></p>
+                        </a>
+            </div>
+            <div class="projects-items">
+                        <a href="http://www.google.com" target="_blank" class="project-tile"> 
+                                <img src="https://raw.githubusercontent.com/freeCodeCamp/cdn/master/build/testable-projects-fcc/images/tribute.jpg"
+                                 alt="project">
+                                <p><span class="hover-title">&lt;</span>Random Quote Machine
+                                     <span class="hover-title">&#47; &gt;</span></p>
+
+                            </a>
+
+                            <a href="http://www.google.com" target="_blank" class="project-tile"> 
+                                    <img src="https://raw.githubusercontent.com/freeCodeCamp/cdn/master/build/testable-projects-fcc/images/tribute.jpg"
+                                     alt="project">
+                                    <p><span class="hover-title">&lt;</span>Random Quote Machine
+                                         <span class="hover-title">&#47; &gt;</span></p>
+
+                                </a>
+
+
+                                <a href="http://www.google.com" target="_blank" class="project-tile"> 
+                                        <img src="https://raw.githubusercontent.com/freeCodeCamp/cdn/master/build/testable-projects-fcc/images/tribute.jpg"
+                                         alt="project">
+                                        <p><span class="hover-title">&lt;</span>Random Quote Machine
+                                             <span class="hover-title">&#47; &gt;</span></p>
+                                    </a>
+            </div>
+            <div class="link">
+                <a href="https://codepen.io/methi0130" class="code-pen_link"> Show all  <span class="space"> &nbsp; > </span></a>
+            </div>
+            
+        </section>
+
+        <section id="contact">
+            <h1>Let's work together...</h1>
+            <p>How do you take your coffee?</p>
+            <div class="contact-links">
+                <a href="https://github.com/meisam9" target="_blank" class="profile-links">F facebook</a>
+                <a href="https://github.com/meisam9" target="_blank" id="profile-link" class="profile-links">G github</a>
+                <a href="https://github.com/meisam9" target="_blank" class="profile-links">T twitter</a>
+                <a href="https://github.com/meisam9" target="_blank" class="profile-links">@ email</a>
+                <a href="https://github.com/meisam9" target="_blank" class="profile-links">P Phone</a>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <p>**This is just a fake portfolio. 
+            All the projects and contact details given are not real.</p>
+        <p>© Created for <a href="http://freeCodeCamp.org"> freeCodeCamp </a></p>
+    </footer>
 </body>
 </html>
